--- a/repositorios/pom.xml
+++ b/repositorios/pom.xml
@@ -25,6 +25,17 @@
 			<artifactId>dominiojpa</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
