--- a/repositorios/pom.xml
+++ b/repositorios/pom.xml
@@ -6,6 +6,26 @@
 	<artifactId>repositorios</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
+
 		<dependency>
 			<groupId>es.avalon</groupId>
 			<artifactId>dominiojpa</artifactId>
